Tela Login e a Tela Cadastro de Produto

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 			<img src="img/carrega.gif">
 		</div>
 	</div>
-</body>
-</html>
 <script>
-    window.location.assign('login.php');
+    window.location.assign('login.html');
 </script>
 </body>
 </html>
