--- a/principal.html
+++ b/principal.html
@@ -2,6 +2,9 @@
 <html lang="pt-br">
 
 <head>
+	<script>
+		if (!localStorage.usuario) window.location.assign('index.html');
+	</script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Título</title>
@@ -44,14 +47,14 @@
 						<li class="dropdown user user-menu">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 								<img src="img/user.png" class="user-image" alt="User Image">
-								<span class="hidden-xs">Usuário</span>
+								<span class="nome_usuario hidden-xs">Usuário</span>
 							</a>
 							<ul class="dropdown-menu">
 								<!-- User image -->
 								<li class="user-header">
 									<img src="img/user.png" class="img-circle" alt="User Image">
 									<p>
-										Usuário - Web Developer
+										<span class="nome_usuario">Usuário</span> - Web Developer
 										<small></small>
 									</p>
 								</li>
@@ -60,7 +63,7 @@
 										<a href="#" class="btn btn-default btn-flat">Perfil</a>
 									</div>
 									<div class="pull-right">
-										<a href="#" class="btn btn-default btn-flat">Sair</a>
+										<a href="#" class="btn btn-default btn-flat btn-logoff">Sair</a>
 									</div>
 								</li>
 							</ul>
@@ -79,7 +82,7 @@
 						<img src="img/user.png" class="img-circle" alt="User Image">
 					</div>
 					<div class="pull-left info">
-						<p>Usuário</p>
+						<p class="nome_usuario">Usuário</p>
 						<a href="#"><i class="fa fa-circle text-success"></i> Online</a>
 					</div>
 				</div>
@@ -103,51 +106,47 @@
 							</span>
 						</a>
 						<ul class="treeview-menu">
-							<li><a href="index.html"><i class="fa fa-circle-o"></i> Principal</a></li>
+							<li><a href="principal.html"><i class="fa fa-circle-o"></i> Principal</a></li>
+						</ul>
+					</li>
+					<li class="treeview">
+						<a href="#">
+							<span>Cadastro</span>
+							<span class="pull-right-container">
+								<i class="fa fa-angle-left pull-right"></i>
+							</span>
+						</a>
+						<ul class="treeview-menu">
+							<li>
+								<a href="#" data-file="produto" onclick="abrirConteudo(this,'Produto');">
+									<i class="fa fa-circle-o"></i> Produto
+								</a>
+							</li>
 						</ul>
 					</li>
 				</ul>
 			</section>
 		</aside>
+
+
 		<div class="content-wrapper">
 			<section class="content-header">
 				<h1>
-					Blank page
-					<small>modelo</small>
+					<span class="titulo_pagina">Blank page</span>
+					<!-- <small>modelo</small> -->
 				</h1>
 				<ol class="breadcrumb">
 					<li><a href="#">Principal</a></li>
-					<li class="active">Blank page</li>
+					<li class="active titulo_pagina">Blank page</li>
 				</ol>
 			</section>
 
 
 			<section class="content">
-				<div class="box">
-					<div class="box-header with-border">
-						<h3 class="box-title">Título</h3>
-
-						<div class="box-tools pull-right">
-							<button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-								<i class="fa fa-minus"></i>
-							</button>
-							<button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-								<i class="fa fa-times"></i>
-							</button>
-						</div>
-					</div>
-					<div class="box-body">
-						Start creating your amazing application!
-						<br>
-						Alteração para refresh
-					</div>
-					<div class="box-footer">
-						Footer
-					</div>
+				<div class="box" id="conteudo_pagina">
+					
 				</div>
 			</section>
-
-
 		</div>
 		<!-- /.content-wrapper -->
 
@@ -174,9 +173,34 @@
 	<!-- AdminLTE for demo purposes -->
 	<script src="biblioteca/dist/js/demo.js"></script>
 	<script>
-		$(document).ready(function () {
+		var usuario_Global = JSON.parse(localStorage.getItem('usuario'));
+
+		$(document).ready(function(){
 			$('.sidebar-menu').tree()
+			$(".nome_usuario").html(JSON.parse(localStorage.getItem('usuario')).nome);
+			// $(".btn-logoff").attr('onclick', function(){ logoff(); });
+			$(".btn-logoff")[0].onclick = function(){ logoff(); }
+			// $(".linkProduto")[0].onclick = function(){  }
 		})
+
+		function abrirConteudo(el, titulo){
+			$(".titulo_pagina").html(titulo);
+			$("#conteudo_pagina").html(""
+				+ "<img src='img/carrega.gif'>"
+			);
+			$.ajax({
+				  url: $(el).data('file') + ".html"
+				, error: function(){ alert('Falha ao carregar pagina!'); }
+			}).done(function(data){
+				$("#conteudo_pagina").html(data);
+			});
+		}
+
+		function logoff(){
+			if (!confirm('Deseja sair da aplicação?')) return false;
+			localStorage.removeItem('usuario');
+			window.location.assign('index.html');
+		}
 	</script>
 </body>
 
