Icone, Datatable e config.json

--- a/categoria.html
+++ b/categoria.html
@@ -136,7 +136,10 @@ $("#descricao").val('')[0].focus();
 
 </script>
 <style>
+	/* .padraoLinhaH{} */
 	.padraoLinha{
-		padding: 0 !important;
+		/* padding: 0 !important; */
+		padding-top: 0 !important;
+		padding-bottom: 0 !important;
 	}
 </style>
