--- a/principal.html
+++ b/principal.html
@@ -7,21 +7,14 @@
 	</script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Título</title>
-	<!-- Tell the browser to be responsive to screen width -->
+	<title class="titulo_projeto_title">Carregando...</title>
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<!-- Bootstrap 3.3.7 -->
 	<link rel="stylesheet" href="biblioteca/bower_components/bootstrap/dist/css/bootstrap.min.css">
-	<!-- Font Awesome -->
 	<link rel="stylesheet" href="biblioteca/bower_components/font-awesome/css/font-awesome.min.css">
-	<!-- Ionicons -->
 	<link rel="stylesheet" href="biblioteca/bower_components/Ionicons/css/ionicons.min.css">
-	<!-- Theme style -->
+	<link rel="stylesheet" href="biblioteca/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css">
 	<link rel="stylesheet" href="biblioteca/dist/css/AdminLTE.min.css">
-	<!-- AdminLTE Skins. Choose a skin from the css/skins
-	folder instead of downloading all of them to reduce the load. -->
 	<link rel="stylesheet" href="biblioteca/dist/css/skins/_all-skins.min.css">
-	<!-- Google Font -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
 
@@ -30,8 +23,8 @@
 	<div class="wrapper">
 		<header class="main-header">
 			<a href="index2.html" class="logo">
-				<span class="logo-mini">Título</span>
-				<span class="logo-lg">Título</span>
+				<span class="logo-mini titulo_projeto_mini"></span>
+				<span class="logo-lg titulo_projeto"></span>
 			</a>
 			<nav class="navbar navbar-static-top">
 				<!-- Sidebar toggle button-->
@@ -96,10 +89,9 @@
 					</div>
 				</form>
 				<ul class="sidebar-menu" data-widget="tree">
-					<li class="header">Menu Principal</li>
+					<!-- <li class="header">Menu Principal</li>
 					<li class="treeview">
 						<a href="#">
-							<!-- <i class="fa fa-dashboard"></i>  -->
 							<span>Principal</span>
 							<span class="pull-right-container">
 								<i class="fa fa-angle-left pull-right"></i>
@@ -128,7 +120,7 @@
 								</a>
 							</li>
 						</ul>
-					</li>
+					</li> -->
 				</ul>
 			</section>
 		</aside>
@@ -162,17 +154,13 @@
 		<div class="control-sidebar-bg"></div>
 	</div>
 
-	<!-- jQuery 3 -->
 	<script src="biblioteca/bower_components/jquery/dist/jquery.min.js"></script>
-	<!-- Bootstrap 3.3.7 -->
 	<script src="biblioteca/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<!-- SlimScroll -->
 	<script src="biblioteca/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-	<!-- FastClick -->
 	<script src="biblioteca/bower_components/fastclick/lib/fastclick.js"></script>
-	<!-- AdminLTE App -->
+	<script src="biblioteca/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
+	<script src="biblioteca/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
 	<script src="biblioteca/dist/js/adminlte.min.js"></script>
-	<!-- AdminLTE for demo purposes -->
 	<script src="biblioteca/dist/js/demo.js"></script>
 	<script src="script.js"></script>
 	<script>
@@ -185,7 +173,16 @@
 			$(".btn-logoff")[0].onclick = function(){ logoff(); }
 			// $(".linkProduto")[0].onclick = function(){  }
 			abrirConteudo($(document.createElement('span')).attr('data-file','main'),'Principal');
-		})
+			$.getJSON("config.json", function(data){
+				$(".titulo_projeto").html(''
+					+ ((data.logo_png || '') == '' ? '' : "<img src='img/"+data.logo_png+".png' height='40px'> ")
+					+ (data.nome_projeto || '')
+				);
+				$(".titulo_projeto_title").html((data.nome_projeto || ''));
+				$(".titulo_projeto_mini").html(((data.logo_png || '') == '' ? '' : "<img src='img/"+data.logo_png+".png' height='40px'>"))
+				if ((data.menu || '')) $(".sidebar-menu").html( resolveMenu(data.menu) );
+			});
+		});
 
 		function abrirConteudo(el, titulo){
 			$(".titulo_pagina").html(titulo);
