--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Pet Carol</title>
+	<title class="titulo_projeto">Carregando...</title>
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<link rel="stylesheet" href="biblioteca/bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="biblioteca/bower_components/font-awesome/css/font-awesome.min.css">
@@ -15,16 +15,18 @@
 <body class="hold-transition login-page">
 	<div class="login-box">
 		<div class="login-logo">
-			<a href="#">
-				Pet Carol
-			</a>
+			<a href="#" class="titulo_projeto"></a>
 		</div>
 		<div class="login-box-body">
 			<form id='formLogin' action="controller/login.php" method="post">
-				Login:
+				<span id="login_desc">Login</span>:
+				<div class="form-group has-feedback">
+					<input type="text" class="form-control" id="login" name="login" required autofocus>
+				</div>
+				<!-- Login:
 				<div class="form-group has-feedback">
 					<input type="text" class="form-control" id="login" name="login">
-				</div>
+				</div> -->
 				Senha:
 				<div class="form-group has-feedback">
 					<input type="password" class="form-control" id="senha" name="senha">
@@ -48,6 +50,15 @@
 				radioClass: 'iradio_square-blue',
 				increaseArea: '20%' /* optional */
 			});
+		});
+
+		$.getJSON("config.json",function(data){
+			console.log(data);
+			$(".titulo_projeto").html((data.nome_projeto || ''));
+			if ((data.login || '') != ''){
+				$("#login").attr('type', (data.login.login_type || 'text'));
+				$("#login_desc").html((data.login.login_desc || 'Login'));
+			}
 		});
 
 		$("#formLogin").submit(function(e){
@@ -75,7 +86,7 @@
 					alert('Login inválido!');
 					$("#login").val('')[0].focus();
 					$("#senha").val('');
-				}			
+				}
 			});
 		});
 	</script>
