--- a/principal/index.html
+++ b/principal/index.html
@@ -3,19 +3,26 @@
 
 <head>
 	<script>
-		if (!localStorage.usuario) window.location.assign('index.html');
+		if (!localStorage.usuario) window.location.assign('../index.html');
 	</script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title class="titulo_projeto_title">Carregando...</title>
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="biblioteca/bower_components/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="biblioteca/bower_components/font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" href="biblioteca/bower_components/Ionicons/css/ionicons.min.css">
-	<link rel="stylesheet" href="biblioteca/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css">
-	<link rel="stylesheet" href="biblioteca/dist/css/AdminLTE.min.css">
-	<link rel="stylesheet" href="biblioteca/dist/css/skins/_all-skins.min.css">
+	<link rel="stylesheet" href="../biblioteca/bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../biblioteca/bower_components/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../biblioteca/bower_components/Ionicons/css/ionicons.min.css">
+	<link rel="stylesheet" href="../biblioteca/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css">
+	<link rel="stylesheet" href="../biblioteca/dist/css/AdminLTE.min.css">
+	<link rel="stylesheet" href="../biblioteca/dist/css/skins/_all-skins.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+	<script>
+		var ext = (window.location.href.split('.')[1] || '').split('?')[0].split('#')[0];
+		if ((['html','php','htm']).indexOf(ext) != -1) {
+			var url = window.location.href.split('/');
+			window.location.assign(url.splice(0,url.length-1).join('/'));
+		}
+	</script>
 </head>
 
 <body class="hold-transition skin-blue fixed sidebar-mini">
@@ -39,13 +46,13 @@
 					<ul class="nav navbar-nav">
 						<li class="dropdown user user-menu">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								<img src="img/user.png" class="user-image" alt="User Image">
+								<img src="../img/user.png" class="user-image" alt="User Image">
 								<span class="nome_usuario hidden-xs">Usuário</span>
 							</a>
 							<ul class="dropdown-menu">
 								<!-- User image -->
 								<li class="user-header">
-									<img src="img/user.png" class="img-circle" alt="User Image">
+									<img src="../img/user.png" class="img-circle" alt="User Image">
 									<p>
 										<span class="nome_usuario">Usuário</span> - Web Developer
 										<small></small>
@@ -72,7 +79,7 @@
 			<section class="sidebar">
 				<div class="user-panel">
 					<div class="pull-left image">
-						<img src="img/user.png" class="img-circle" alt="User Image">
+						<img src="../img/user.png" class="img-circle" alt="User Image">
 					</div>
 					<div class="pull-left info">
 						<p class="nome_usuario">Usuário</p>
@@ -154,15 +161,15 @@
 		<div class="control-sidebar-bg"></div>
 	</div>
 
-	<script src="biblioteca/bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="biblioteca/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="biblioteca/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-	<script src="biblioteca/bower_components/fastclick/lib/fastclick.js"></script>
-	<script src="biblioteca/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
-	<script src="biblioteca/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
-	<script src="biblioteca/dist/js/adminlte.min.js"></script>
-	<script src="biblioteca/dist/js/demo.js"></script>
-	<script src="script.js"></script>
+	<script src="../biblioteca/bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="../biblioteca/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="../biblioteca/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+	<script src="../biblioteca/bower_components/fastclick/lib/fastclick.js"></script>
+	<script src="../biblioteca/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
+	<script src="../biblioteca/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
+	<script src="../biblioteca/dist/js/adminlte.min.js"></script>
+	<script src="../biblioteca/dist/js/demo.js"></script>
+	<script src="../script.js"></script>
 	<script>
 		var usuario_Global = JSON.parse(localStorage.getItem('usuario'));
 
@@ -173,13 +180,13 @@
 			$(".btn-logoff")[0].onclick = function(){ logoff(); }
 			// $(".linkProduto")[0].onclick = function(){  }
 			abrirConteudo($(document.createElement('span')).attr('data-file','main'),'Principal');
-			$.getJSON("config.json", function(data){
+			$.getJSON("../config.json", function(data){
 				$(".titulo_projeto").html(''
-					+ ((data.logo_png || '') == '' ? '' : "<img src='img/"+data.logo_png+".png' height='40px'> ")
+					+ ((data.logo_png || '') == '' ? '' : "<img src='../img/"+data.logo_png+".png' height='40px'> ")
 					+ (data.nome_projeto || '')
 				);
 				$(".titulo_projeto_title").html((data.nome_projeto || ''));
-				$(".titulo_projeto_mini").html(((data.logo_png || '') == '' ? '' : "<img src='img/"+data.logo_png+".png' height='40px'>"))
+				$(".titulo_projeto_mini").html(((data.logo_png || '') == '' ? '' : "<img src='../img/"+data.logo_png+".png' height='40px'>"))
 				if ((data.menu || '')) $(".sidebar-menu").html( resolveMenu(data.menu) );
 			});
 		});
@@ -226,10 +233,10 @@
 			}
 
 			$("#conteudo_pagina").html(""
-				+ "<img src='img/carrega.gif'>"
+				+ "<img src='../img/carrega.gif'>"
 			);
 			$.ajax({
-				  url: $(el).data('file') + ".html"
+				  url: "../view/" + $(el).data('file') + ".html"
 				, error: function(){ alert('Falha ao carregar pagina!'); }
 			}).done(function(data){
 				$("#conteudo_pagina").html(data);
